# vect_editor_prototype

./: .travis.yml  AddShapeCmd_8cpp.html  AddShapeCmd_8cpp__incl.map  AddShapeCmd_8cpp__incl.md5  AddShapeCmd_8h.html  AddShapeCmd_8h__dep__incl.map  AddShapeCmd_8h__dep__incl.md5  AddShapeCmd_8h__incl.map  AddShapeCmd_8h__incl.md5  AddShapeCmd_8h_source.html  Button_8cpp.html  Button_8cpp__incl.map  Button_8cpp__incl.md5  Button_8h.html  Button_8h__dep__incl.map  Button_8h__dep__incl.md5  Button_8h__incl.map  Button_8h__incl.md5  Button_8h_source.html  ButtonsCallbackFactory_8cpp.html  ButtonsCallbackFactory_8cpp__incl.map  ButtonsCallbackFactory_8cpp__incl.md5  ButtonsCallbackFactory_8h.html  ButtonsCallbackFactory_8h__dep__incl.map  ButtonsCallbackFactory_8h__dep__incl.md5  ButtonsCallbackFactory_8h__incl.map  ButtonsCallbackFactory_8h__incl.md5  ButtonsCallbackFactory_8h_source.html  CMakeLists.txt  Circle_8cpp.html  Circle_8cpp__incl.map  Circle_8cpp__incl.md5  Circle_8h.html  Circle_8h__dep__incl.map  Circle_8h__dep__incl.md5  Circle_8h__incl.map  Circle_8h__incl.md5  Circle_8h_source.html  CommandHandler_8cpp.html  CommandHandler_8cpp__incl.map  (+461 more)
search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_b.js  all_c.js  all_d.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_9.js  classes_a.js  files_0.js  files_1.js  files_2.js  files_3.js  files_4.js  files_5.js  files_6.js  files_7.js  files_8.js  files_a.js  files_b.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  (+8 more)
src/: AddShapeCmd.cpp  AddShapeCmd.h  Button.h  ButtonsCallbackFactory.cpp  ButtonsCallbackFactory.h  CMakeLists.txt  CommandHandler.cpp  CommandHandler.h  Configurator.cpp  Configurator.h  Controller.cpp  Controller.h  ExportEngine.cpp  ExportEngine.h  FSManager.cpp  FSManager.h  Factory.cpp  Factory.h  GuiContext.cpp  GuiContext.h  GuiInteractor.cpp  GuiInteractor.h  IExportEngine.h  IGuiInteractor.h  IImportEngine.h  IdCreator.cpp  IdCreator.h  ImportEngine.cpp  ImportEngine.h  RemoveShapeCmd.cpp  RemoveShapeCmd.h  ShapesFactory.cpp  ShapesFactory.h  main.cpp
src/commands/: AddShapeCmd.h  ExportDocumentCmd.cpp  ExportDocumentCmd.h  ImportDocumentCmd.cpp  ImportDocumentCmd.h  RemoveShapeCmd.cpp  RemoveShapeCmd.h
src/commands/interface/: ICommand.h
src/controller/: CommandHandler.h  Configurator.cpp  Configurator.h  Controller.cpp  Controller.h  FSManager.cpp  FSManager.h
src/controller/interface/: ICommandHandler.h  IConfiguration.h  IController.h  IFSManager.h
src/document/: DocsFactory.cpp  DocsFactory.h  Document.cpp  Document.h  ExportEngine.cpp  ExportEngine.h  ImportEngine.cpp  ImportEngine.h
src/document/interface/: IDocsFactory.h  IDocument.h  IExportEngine.h  IImportEngine.h
src/documents/: Document.cpp  Document.h
src/documents/base/: IDocument.h
src/interfaces/: IButton.h  ICommand.h  ICommandHandler.h  IController.h  IDocsFactory.h  IExportEngine.h  IFSManager.h  IFactory.h  IGuiContext.h  IGuiInteractor.h  IIdCreator.h  IImportEngine.h  IShapesFactory.h
src/shapes/: Circle.cpp  Circle.h  IdCreator.cpp  IdCreator.h  Line.cpp  Line.h  ShapesCreator.cpp  ShapesCreator.h  ShapesFactory.cpp  ShapesFactory.h
src/shapes/base/: IIdCreator.h
src/shapes/interface/: IIdCreator.h  IShape.h  IShapesFactory.h
src/ui/: Button.cpp  Button.h  ButtonsCallbackFactory.cpp  ButtonsCallbackFactory.h  GuiContext.cpp  GuiContext.h
src/ui/interface/: IButton.h  IGuiContext.h
